# houdini_asset_relinker

./: .gitignore  .pre-commit-config.yaml  DEVELOPER.md  README.md  pyproject.toml
.github/workflows/: release.yml
package/: houdini_asset_relinker.json
scripts/: build_release_artifact.py
scripts/python/houdini_asset_relinker/: __init__.py  _version.py  export.py  hou_access.py  models.py  path_utils.py  qt.py  scanner.py  ui.py  updater.py
scripts/python/houdini_asset_relinker/ui/: __init__.py  __main__.py  houdini.py  qt_constants.py  reference_display.py  relink_state.py  style.py  table_models.py  view_builders.py  widgets.py  window.py
tests/: test_export.py  test_path_utils.py  test_scanner.py  test_ui_relink_state.py  test_ui_window.py  test_updater.py
toolbar/: asset_relinker.shelf
