[project]
name = "houdini-asset-relinker"
version = "0.3.0"
description = "Houdini HOM utility to scan and relink external asset paths in a hip file."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
pyside6 = [
    "pyside6>=6.6",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "UP", "W"]
ignore = ["N802", "UP045"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.uv]
link-mode = "copy"
package = false

[tool.pytest.ini_options]
pythonpath = ["scripts/python"]
testpaths = ["tests"]
