[project]
name = "houdini-asset-relinker"
version = "0.0.0"
requires-python = ">=3.9"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]
pyside6 = [
    "pyside6>=6.6",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "UP", "W"]
ignore = ["N802", "UP045"]

[tool.ruff.format]
docstring-code-format = true
quote-style = "double"

[tool.uv]
link-mode = "copy"
package = false

[tool.pytest.ini_options]
pythonpath = ["scripts/python"]
testpaths = ["tests"]
